<resources>
    <!-- Login -->
    <string name="app_name">Desafio Conta Corrente</string>
    <string name="progress_loading">Loading…</string>
    <string name="enter_email_login">Email</string>
    <string name="enter_password_login">Senha</string>
    <string name="email">Email</string>
    <string name="access">Acessar</string>

    <!-- Titles -->
    <string name="title_account_access">Acesso a Conta</string>
    <string name="title_transfer">Transferência</string>
    <string name="title_home">Minha conta</string>
    <string name="title_confirm_transfer">Confirmar Transferência</string>
    <string name="title_bank_statement">Extrato</string>
    <string name="title_exit">Sair</string>

    <!-- Errors -->
    <string name="error_inactive_user">Usuário inativo!</string>
    <string name="error_user_not_found">Email ou senha incorretos!</string>
    <string name="error_search">Erro ao realizar a busca!</string>
    <string name="error_insufficient_balance">Saldo insuficiente!</string>
    <string name="error_update_data">Erro ao atualizar os dados da conta!</string>
    <string name="error_invalid_email">Email inválido!</string>
    <string name="error_invalid_field">Campo(s) inválido(s)!</string>
    <string name="error_no_connection">Sem conexão!</string>

    <!-- Home -->
    <string name="hello">Olá,</string>
    <string name="balance">Saldo</string>
    <string name="rs">R$</string>
    <string name="balance_value">00,00</string>

    <string name="shared_pref_file_key">EXTRAS</string>

    <!-- Bank Statement -->
    <string name="calendar_icon">Calendar Icon</string>
    <string name="plus_icon">Plus icon</string>
    <string name="refresh_icon">Refresh icon</string>
    <string name="banking_list_empty">Não há histórico de transferências em sua conta.</string>

    <!-- Transfer -->
    <string name="enter_email_transfer">Email de destino</string>
    <string name="enter_value_transfer">Valor</string>
    <string name="button_transfer">Transferir</string>
    <string name="error_make_transfer">Erro ao realizar transferência!</string>

    <!-- Dialog -->
    <string name="dialog_exit_title">Sair da conta</string>
    <string name="dialog_exit_body">Você realmente deseja sair da conta?</string>
    <string name="dialog_transfer_title">Transferência realizada com sucesso</string>
    <string name="dialog_yes">SIM</string>
    <string name="dialog_no">NÃO</string>
    <string name="dialog_neutral">VOLTAR</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="error_invalid_account">Conta inválida!</string>

</resources>
