<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".transactional.transfer.TransferFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmailTransfer"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/enter_email_transfer"
            android:inputType="textEmailAddress"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/defaultHintColor" />

        <EditText
            android:id="@+id/etValue"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/enter_value_transfer"
            android:inputType="number"
            android:textColor="@color/defaultTextColor"
            android:textColorHint="@color/defaultHintColor" />

        <Button
            android:id="@+id/btnTransfer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_button"
            android:text="@string/button_transfer"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>